# codex-aura

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  PRIVACY.md  PROTOCOL-CHANGELOG.md  PROTOCOL.md  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  test_clustering.py  test_sdk.py  test_sync_status.py  test_token_budget.py  test_visualization.py
.codex-aura/: config.yaml  plugins.yaml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: ci.yml  pr-impact.yml  publish.yml  release.yml  test-action.yml
dashboard/: middleware.ts  package-lock.json  package.json
dashboard/app/: layout.tsx  page.tsx
dashboard/app/(dashboard)/: layout.tsx  page.tsx
dashboard/app/dashboard/: page.tsx
dashboard/components/dashboard/: ApiUsageStats.tsx  CodeAuthorship.tsx  HotspotMap.tsx  SettingsBilling.tsx
dashboard/components/graph/: GraphVisualization.tsx  NodeDetailsPanel.tsx
dashboard/components/layout/: Header.tsx  Sidebar.tsx  UserMenu.tsx
dashboard/components/repos/: AddRepoModal.tsx  RepoCard.tsx  RepoListSkeleton.tsx
dashboard/hooks/: use-toast.ts  useGraph.ts  useRepos.ts  useUser.ts
dashboard/stores/: graph-store.ts
dashboard/types/: index.ts
dashboard/utils/: formatRelativeTime.ts
docs/: architecture.md  codex_aura_roadmap.md  index.md  migrations.md  phase_1.2.md  phase_1.3.md  todo.md
docs/adr/: ADR-001.md  ADR-002.md  ADR-003.md  ADR-004.md
docs/api/: endpoints.md  overview.md  schemas.md
docs/cli/: analyze.md  commands.md  serve.md
docs/development/: architecture.md  contributing.md
docs/getting-started/: configuration.md  index.md  installation.md  quick-start.md
docs/integrations/: github-action.md  vscode.md
docs/plugins/: creating-plugins.md  plugin-api.md
docs/schema/: README.md  config-v1.0.json  edge-examples.json  graph-examples.json  graph-v0.1.json  node-examples.json
docs/sdk/: api-reference.md  best-practices.md  claude-integration.md  getting-started.md  openai-integration.md
docs/tasks/: phase_0.md  phase_1.1.md  phase_2.1.md  phase_2.2.md  phase_2.3.md  phase_2.4.md  phase_2.5.md  phase_2.6.md
examples/: benchmark.py  demo_affected.py  demo_visualize.py  graph.json
examples/agents/: README.md  claude_agent.py  openai_agent.py
examples/benchmarks/: accuracy_test.py  token_savings.py
examples/custom-plugin/: LICENSE  README.md  setup.py
examples/custom-plugin/codex_aura_custom_plugin/: __init__.py  context.py  impact.py
examples/custom-plugin/tests/: __init__.py  test_context.py  test_impact.py
examples/simple_project/: config.py  main.py  utils.py
examples/simple_project/services/: user.py
github-action-codex-aura/: Dockerfile  README.md  action.yml  entrypoint.sh
schemas/: context-request.schema.json  context-response.schema.json  edge.schema.json  graph.schema.json  node.schema.json  service.schema.json
scripts/: benchmark.py  migrate_to_neo4j.py  neo4j_backup.py  neo4j_backup.sh  neo4j_health_check.py  neo4j_restore.py  neo4j_restore.sh  schema.cypher
src/codex_aura/: .installation_id  __init__.py  analytics.py  health.py  impact_engine.py  logging.py  metrics.py  middleware.py  tracing.py
src/codex_aura/analyzer/: __init__.py  base.py  complexity.py  dependency_scanner.py  dependency_service.py  python.py  utils.py
src/codex_aura/api/: api_keys.py  billing.py  budget.py  dependencies.py  impact.py  server.py  services.py  usage.py  webhooks.py
src/codex_aura/billing/: plans.py  stripe_client.py  usage.py  webhook_handler.py
src/codex_aura/budgeting/: analytics.py
src/codex_aura/cli/: main.py  tree.py
src/codex_aura/config/: __init__.py  parser.py  settings.py
tests/: conftest.py  test_analyzer.py  test_api.py  test_config.py  test_context_formatting.py  test_dependency_scanner.py  test_e2e.py  test_edge_cases.py  test_example.py  test_extractors.py  test_graph_diff.py  test_impact_engine.py  test_incremental_update.py  test_integration.py  test_models.py  test_performance.py  test_pipeline.py  test_plugins.py  test_postgres_snapshots.py  test_real_projects.py  test_service_registry.py  test_snapshot_service.py  test_storage.py
tests/api/: test_endpoints.py
tests/integration/: test_webhook_flow.py
tests/protocol/: test_compliance.py
vscode-codex-aura/: README.md  codex-aura-0.1.0.vsix  package-lock.json  package.json
vscode-codex-aura/media/: graph.css
vscode-codex-aura/src/: decorations.ts  extension.ts  telemetry.ts  treeDecorators.ts
(+77 files in other folders)
