[tool.poetry]
name = "codex-aura"
version = "0.1.0"
description = "Code context mapping for AI agents"
authors = ["Lambertain <your.email@example.com>"]
license = "Apache-2.0"
python = "^3.11"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "*"
ruff = "*"
mypy = "*"

[tool.poetry.scripts]
codex-aura = "codex_aura.cli.main:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"